chat: fix background z-index in select msg mode
Change the messages to appear in front of the selected message background.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1348,6 +1348,7 @@
                         opacity: 0.6;
                         position: absolute;
                         top: 0; left: 0; bottom: 0; right: 0;
+                        z-index: 0;
                     }
                     /// States.
                     &:hover, &._3Z2tD {
